2001-11-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (tagALTTABINFO, tagCOMBOBOXINFO, 
	tagCURSORINFO, tagMENUBARINFO, tagMENUINFO, tagMONITORINFO
	tagSCROLLBARINFO, tagTITLEBARINFO. tagWINDOWINFO,
	tagLASTINPUTINFO ): Define new structures. 
	(EndMenu, GetAltTabInfo[AW],GetComboBoxInfo,GetCursorInfo,
	GetLastInputInfo, GetListBoxInfo, GetMenuBarInfo,
	GetMonitorInfo[AW], GetScrollBarInfo, GetTitleBarInfo,
	GetWindowInfo, GetWindowModuleFileName[AW],GetMenuInfo
	SetMenuInfo): Add new prototypes.
	* lib/user32.def: Add import stubs for above functions.

	* include/winuser.h (IDC_STATIC): Protect against prior
	definition.

2001-11-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (IDC_STATIC): Add define.
	Thanks to: Benoit Laniel.

2001-11-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commdlg.h: Include <unknwn.h> rather than local
	definition of LPUKNOWN. 
	* include/rpcproxy.h: Don't include if ndef CINTERFACE.
	Emit warning.

2001-11-05  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/windef.h (DECLSPEC_NORTEURN): Add an empty version
	for Watcom.
	(DECLARE_STDCALL_P): Use it to add __stdcall decoration for
	functions of the form 'type * function(...)' in a way compatible
	with both Watcom and GCC.
	* include/rpcdcep.h (I_RpcAllocate): Use DECLARE_STDCALL_P.
	* include/rpcproxy.h (CInterfaceProxyVtbl): Do not declare
	zero-sized arrays for Watcom. Mark as __extension for __GNUC__.
	* include/windows.h: Watcom can use anonymous structs/unions.
	* include/winnt.h: Watcom can use 64 bit ints.
	(GetCurrentFiber): Add another inline definition using
	Watcom inline assembly syntax.
	(GetFiberData): Likewise.
	* include/winsock.h (inet_ntoa): Use DECLARE_STDCALL_P.
	(gethostbyname): Likewise.
	(gethostbyaddr}: Likewise.
	(getservbyport}: Likewise.
	(getservbyname}: Likewise.
	(getprotobynumber}: Likewise.
	(getprotobyname}: Likewise.
	* include/winsock2.h (inet_ntoa): Use DECLARE_STDCALL_P.