@@ -1,3 +1,15 @@
+2001-11-23  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/winbase.h (OSVERSIONINFO[AW],VER_PLATFORM_WIN32s,
+	VER_PLATFORM_WIN32_WINDOWS,VER_PLATFORM_WIN32_NT): Move from
+	here ...
+	* include/winnt.h: ... to here.
+	* include/winbase.h (VerifyVersionInfo[AW]): Add declaration.
+	* include/winnt.h (OSVERSIONINFOEX[AW]): Add structure definitions
+	and typedefs.
+	(VER_NT_WORKSTATION,VER_NT_DOMAIN_CONTROLLER,VER_NT_SERVER):
+	Add defines.
+
 2001-11-16  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/winuser.h (tagALTTABINFO, tagCOMBOBOXINFO, 
